# AoC2023

./: .gitignore  AOC2023.cabal
day01/: Main.hs
day04/: Main.hs
day06/: Main.hs
day08/: Main.hs
day09/: Main.hs
day10/: Main.hs
day11/: Main.hs
day12/: Main.hs
day13/: Main.hs
day14/: Main.hs
day15/: Main.hs
day16/: Main.hs
day17/: Main.hs  example2
day18/: Main.hs  pt1map
day19/: Main.hs
day2/: Main.hs
day20/: Main.hs
day21/: Main.hs
day22/: Main.hs
day23/: Main.hs
day24/: Main.hs
day25/: Main.hs
day3/: Main.hs
day5/: Main.hs
day6/: Main.hs
day7/: Main.hs
day8/: Main.hs
day9/: Main.hs
util/: Util.hs
