cabal-version:      2.4
name:               AOC2023
version:            0.1.0.0
build-type: Simple

library
  exposed-modules:
    Util
  hs-source-dirs: util
  build-depends:
    base,
    containers,
  default-language: Haskell2010

executable day1
  main-is: Main.hs
  build-depends:
    base,
    text,
    AOC2023
  hs-source-dirs: day1
  default-language: Haskell2010

executable day2
  main-is: Main.hs
  build-depends:
    base,
    AOC2023
  hs-source-dirs: day2
  default-language: Haskell2010

executable day3
  main-is: Main.hs
  build-depends:
    base,
    AOC2023
  hs-source-dirs: day3
  default-language: Haskell2010

executable day4
  main-is: Main.hs
  build-depends:
    base,
    AOC2023
  hs-source-dirs: day4
  default-language: Haskell2010

executable day5
  main-is: Main.hs
  ghc-options: -O2 -threaded 
  build-depends:
    base,
    AOC2023
  hs-source-dirs: day5
  default-language: Haskell2010

executable day6
  main-is: Main.hs
  ghc-options: -O2 -threaded 
  build-depends:
    base,
    AOC2023
  hs-source-dirs: day6
  default-language: Haskell2010

executable day7
  main-is: Main.hs
  ghc-options: -O2 -threaded 
  build-depends:
    base,
    AOC2023
  hs-source-dirs: day7
  default-language: Haskell2010

executable day8
  main-is: Main.hs
  ghc-options: -O2 -threaded 
  build-depends:
    base,
    AOC2023,
    containers,
  hs-source-dirs: day8
  default-language: Haskell2010

executable day9
  main-is: Main.hs
  ghc-options: -O2 -threaded 
  build-depends:
    base,
    AOC2023,
    containers,
  hs-source-dirs: day9
  default-language: Haskell2010

executable day10
  main-is: Main.hs
  ghc-options: -O2 -threaded 
  build-depends:
    base,
    AOC2023,
    containers,
  hs-source-dirs: day10
  default-language: Haskell2010

executable day11
  main-is: Main.hs
  ghc-options: -O2 -threaded 
  build-depends:
    base,
    AOC2023,
    containers,
  hs-source-dirs: day11
  default-language: Haskell2010

executable day12
  main-is: Main.hs
  ghc-options: -O2 -threaded 
  build-depends:
    base,
    AOC2023,
    containers,
  hs-source-dirs: day12
  default-language: Haskell2010

executable day13
  main-is: Main.hs
  ghc-options: -O2 -threaded 
  build-depends:
    base,
    AOC2023,
    containers,
  hs-source-dirs: day13
  default-language: Haskell2010

executable day14
  main-is: Main.hs
  ghc-options: -O2 -threaded 
  build-depends:
    base,
    AOC2023,
    containers,
  hs-source-dirs: day14
  default-language: Haskell2010

executable day15
  main-is: Main.hs
  ghc-options: -O2 -threaded 
  build-depends:
    base,
    AOC2023,
    containers,
    text,
    vector,
  hs-source-dirs: day15
  default-language: Haskell2010

executable day16
  main-is: Main.hs
  ghc-options: -O2 -threaded 
  build-depends:
    base,
    AOC2023,
    containers,
    text,
    vector,
  hs-source-dirs: day16
  default-language: Haskell2010

executable day17
  main-is: Main.hs
  ghc-options: -O2
  build-depends:
    base,
    AOC2023,
    containers,
    text,
    vector,
    search-algorithms,
  hs-source-dirs: day17
  default-language: Haskell2010

executable day18
  main-is: Main.hs
  ghc-options: -O2 -Wall -Wextra
  build-depends:
    base,
    AOC2023,
    containers,
    text,
  hs-source-dirs: day18
  default-language: Haskell2010

executable day19
  main-is: Main.hs
  ghc-options: -O2 -Wall -Wextra
  build-depends:
    base,
    AOC2023,
    containers,
    text,
  hs-source-dirs: day19
  default-language: Haskell2010

executable day20
  main-is: Main.hs
  ghc-options: -O2 -Wall -Wextra
  build-depends:
    base,
    AOC2023,
    containers,
    text,
  hs-source-dirs: day20
  default-language: Haskell2010

executable day21
  main-is: Main.hs
  ghc-options: -O2 -Wall -Wextra
  build-depends:
    base,
    AOC2023,
    containers,
    text,
  hs-source-dirs: day21
  default-language: Haskell2010

-- vim: nospell

